Now can add different fragrances